fix: use try/except imports for Anki package compatibility
Anki loads add-ons as packages, requiring relative imports.
But pytest runs modules standalone, requiring absolute imports.
Solution: try relative import first (Anki), fall back to absolute (pytest).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,4 @@ python_files = ["test_*.py"]
 norecursedirs = ["__pycache__"]
 python_classes = ["Test*"]
 addopts = "--ignore=__init__.py --ignore=sync_dialog.py --ignore=config_manager.py"
+pythonpath = ["."]
